--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,22 @@ repositories {
 }
 
 dependencies {
-    compile "org.seleniumhq.selenium:selenium-java:2.15.0"
+    compile "org.seleniumhq.selenium:selenium-java:2.21.0"
     compile "org.testng:testng:6.3.1"
+    testCompile "com.google.inject:guice:3.0"
+    testCompile("org.uncommons:reportng:1.1.2") {
+        exclude group: "org.testng", module: "testng"
+    }
 }
 
-test {
+tasks.withType(Test) {
     useTestNG()
-    maxParallelForks = 20
+    systemProperty 'BROWSER', System.getProperty('BROWSER', 'firefox')
+    maxParallelForks = 4
+        options {
+            listeners << 'org.uncommons.reportng.HTMLReporter'
+            listeners << 'org.uncommons.reportng.JUnitXMLReporter'
+        }
 }
 
 task includegroup1(type: Test) {
